<resources>
    <string name="app_name">Leopard Split</string>
    <string name="namesLabel">Names</string>
    <string name="percentLabel">Percent</string>
    <string name="submitButton">Submit</string>
    <string name="youLabel">You</string>
    <string name="home">Home</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="error">ErrorText</string>

</resources>